# cs-master-thesis

./: .gitignore  Cargo.toml  README.md  TODO.txt  index.html
.github/workflows/: config.yml.template  deploy-lichess.yml  docker.yml  viz.yml
assets/: index-Becg-h84.js  index-Bme8ilQ9.js  index-Bmrr-7kP.js  index-BzhxbfAs.js  index-CJn8Q0_m.js  index-CMCkmkyH.js  index-CTiBfKYD.js  index-CVcfYUGx.js  index-wk1QYH43.js
bot/: Cargo.toml
bot/src/: chess.rs  encoding.rs  eval.rs  main.rs  mcts.rs  nn2.rs  nn3.rs  position.rs  pv.rs  search.rs  tt.rs
engine/: Cargo.toml
engine/src/: defs.rs  limit.rs  limits.rs  main.rs  position.rs  position_stack.rs  pv.rs  pv_table.rs  search.rs  transposition.rs  transposition_table.rs  tt.rs
examples/: bench_matches.rs  bench_matches_nn.rs  bench_nn.rs  mcts.rs  minimax_nn.rs  negamax_nn.rs
generator/: Cargo.toml
generator/src/: main.rs  sample.rs  visitor.rs
lib/: encoding.py  model.py  serialize.py  service.py
models/: best.nn  best_256.nn  hv-512.nn  model-0682-1.751.keras  model-0682-1.751.onnx
models/all+mb/: 192-1-eval_16384_(all+mb[1536]→512)x2→32→1.nn  192-2-eval_16384_(all+mb[1536]→512)x2→32→1.nn  192-3-eval_16384_(all+mb[1536]→512)x2→32→1.nn  192-4-eval_16384_(all+mb[1536]→512)x2→32→1.nn  256-1-eval_16384_(all+mb[1536]→512)x2→32→1.nn  256-3-eval_16384_(all+mb[1536]→512)x2→32→1.nn
models/all+mc/: 192-1-eval_16384_(all+mc[974]→512)x2→32→1.nn  192-2-eval_16384_(all+mc[974]→512)x2→32→1.nn  192-3-eval_16384_(all+mc[974]→512)x2→32→1.nn  192-4-eval_16384_(all+mc[974]→512)x2→32→1.nn  256-1-eval_16384_(all+mc[974]→512)x2→32→1.nn  256-2-eval_16384_(all+mc[974]→512)x2→32→1.nn  256-3-eval_16384_(all+mc[974]→512)x2→32→1.nn  256-4-eval_16384_(all+mc[974]→512)x2→32→1.nn
models/all+ph/: 192-1-eval_16384_(all+ph[1920]→512)x2→32→1.nn  192-2-eval_16384_(all+ph[1920]→512)x2→32→1.nn  192-3-eval_16384_(all+ph[1920]→512)x2→32→1.nn  192-4-eval_16384_(all+ph[1920]→512)x2→32→1.nn  256-1-eval_16384_(all+ph[1920]→512)x2→32→1.nn  256-2-eval_16384_(all+ph[1920]→512)x2→32→1.nn  256-3-eval_16384_(all+ph[1920]→512)x2→32→1.nn
models/all+ph+pv/: 192-1-eval_16384_(all+ph+pv[3072]→512)x2→32→1.nn  192-2-eval_16384_(all+ph+pv[3072]→512)x2→32→1.nn  192-3-eval_16384_(all+ph+pv[3072]→512)x2→32→1.nn  192-4-eval_16384_(all+ph+pv[3072]→512)x2→32→1.nn  256-1-eval_16384_(all+ph+pv[3072]→512)x2→32→1.nn  256-2-eval_16384_(all+ph+pv[3072]→512)x2→32→1.nn  256-3-eval_16384_(all+ph+pv[3072]→512)x2→32→1.nn
models/all+pv/: 192-1-eval_16384_(all+pv[1920]→512)x2→32→1.nn  192-2-eval_16384_(all+pv[1920]→512)x2→32→1.nn  192-3-eval_16384_(all+pv[1920]→512)x2→32→1.nn  192-4-eval_16384_(all+pv[1920]→512)x2→32→1.nn  256-1-eval_16384_(all+pv[1920]→512)x2→32→1.nn  256-2-eval_16384_(all+pv[1920]→512)x2→32→1.nn  256-3-eval_16384_(all+pv[1920]→512)x2→32→1.nn
models/d1+d2/: 192-1-eval_16384_(d1+d2[360]→512)x2→32→1.nn  192-2-eval_16384_(d1+d2[360]→512)x2→32→1.nn  192-3-eval_16384_(d1+d2[360]→512)x2→32→1.nn  192-4-eval_16384_(d1+d2[360]→512)x2→32→1.nn  256-2-eval_16384_(d1+d2[360]→512)x2→32→1.nn  (+2 more)
nn/: Cargo.toml
nn_viz/: .prettierrc  index.html  nn.ts  package-lock.json  package.json  render.ts  vite.config.js
notebooks/: explore.ipynb  export.ipynb  puzzles.ipynb  quantize.ipynb  test.ipynb  train.ipynb  train_pqr.ipynb  train_pqr_pytorch.ipynb
scripts/: .gitignore  build_dataset.sh  check_nn.py  download_artifacts.py  gen_model.py  pqr_dataset.py  requirements.txt  run_games.py  run_puzzles.py  sigmoid_fitter.py  stats.ipynb  sweep.yml  train.py
src/: lib.rs  main.rs  nn.rs  nn_agent.rs  ringbuffer_set.rs  trainer.rs
tests/: alphabeta.rs  mcts.rs  minimax.rs  negamax.rs
thesis/: Cargo.toml
tools/: Cargo.toml  out.csv
tools/src/: batch_loader.rs  build_dataset.rs  convert.rs  encode.rs  feature_set_size.rs  game_visitor.rs  info.rs  main.rs  plain_format.rs  pos_encoding.rs  samples_service.rs  stats.rs  uci_engine.rs
tools/src/method/: eval.rs  mod.rs  pqr.rs  stats_topk.rs
(+648 files in other folders)
