[package]
name = "thesis"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15.6"
ort = { git = "https://github.com/pykeio/ort", branch = "v2", features = ["download-binaries", "cuda"] }
rand = "0.8.5"
ringbuffer = "0.15.0"
shakmaty = "0.26.0"
smallvec = "1.11.1"
tracing-subscriber = "0.3.17"
