[package]
name = "thesis"
version = "0.1.0"
edition = "2021"

[dependencies]
flume = "0.11.0"
indicatif = "0.17.7"
lazy_static = "1.4.0"
ndarray = "0.15.6"
ort = { git = "https://github.com/pykeio/ort", rev = "584a6e34", features = ["fetch-models", "download-binaries", "cuda"] }
rand = "0.8.5"
rayon = "1.8.0"
ringbuffer = "0.15.0"
shakmaty = "0.26.0"
shared_memory = "0.12.4"
smallvec = "1.11.1"
tracing-subscriber = "0.3.17"
ort_batcher = { git = "https://github.com/mlomb/ort-batcher" }
