[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15.6"
ort = { version = "2.0.0-alpha.4", features = ["ndarray", "cuda", "download-binaries", "load-dynamic"] }
rand = "0.8.5"
shakmaty = { git = "https://github.com/niklasf/shakmaty" }
smallvec = "1.13.1"
vampirc-uci = {version = "0.11" }

[profile.release]
debug = true
