[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.15.6", features = ["blas"] }
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
ndarray-npy = "0.8.1"
ort = { version = "2.0.0-alpha.4", features = ["ndarray", "cuda", "download-binaries", "load-dynamic"] }
rand = "0.8.5"
shakmaty = { git = "https://github.com/niklasf/shakmaty" }
smallvec = "1.13.1"
vampirc-uci = {version = "0.11" }
cblas-sys = "0.1.4"
serde_json = "1.0.113"
clap = { version = "4.5.0", features = ["derive"] }

[profile.release]
debug = true
