[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.15.6", features = ["blas"] }
ndarray-npy = "0.8.1"
rand = "0.8.5"
shakmaty = { git = "https://github.com/niklasf/shakmaty" }
smallvec = "1.13.1"
vampirc-uci = {version = "0.11" }
serde_json = "1.0.113"
clap = { version = "4.5.0", features = ["derive"] }
nn = { path = "../nn" }

[profile.release]
debug = true
