[package]
name = "generator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features=["derive"] }
indicatif = "0.17.7"
pgn-reader = "0.25.0"
rand = "0.8.5"
shakmaty = "0.26.0"
wild = "2.2.0"
zstd = "0.13.0"

[patch.crates-io]
shakmaty = { git = "https://github.com/niklasf/shakmaty" }

