[package]
name = "tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
nn = { path = "../nn" }
rand = "0.8.5"
pgn-reader = "0.25.0"
shakmaty = "0.26.0"

[patch.crates-io]
shakmaty = { git = "https://github.com/niklasf/shakmaty" }
