[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
nn = { path = "../nn" }
rand = "0.8.5"
pgn-reader = "0.26.0"
shakmaty = "0.27.0"
reqwest = { version = "0.11.24", features = ["blocking"] }
zstd = "0.13.0"
indicatif = "0.17.8"
shared_memory = "0.12.4"
crossbeam = "0.8.4"
rayon = "1.10.0"

[patch.crates-io]
shakmaty = { git = "https://github.com/niklasf/shakmaty" }
